k3s/ingress/petclinic-combined+.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: petclinic-deployment
  namespace: default
spec:
  replicas: 2
  selector:
    matchLabels:
      app: petclinic
  template:
    metadata:
      labels:
        app: petclinic
    spec:
      containers:
      - name: petclinic
        image: alexstue/jul24-petclinic:1.0
        resources:
          requests:
            memory: "256Mi"
            cpu: "500m"
          limits:
            memory: "512Mi"
            cpu: "1000m"
        ports:
        - containerPort: 8080 
---
apiVersion: v1
kind: Service
metadata:
  name: petclinic-service
  namespace: default
spec:
  selector:
    app: petclinic
  type: LoadBalancer # ClusterIP Loadbalancernot working without AWS
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
      nodePort: 30001
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: petclinic-ingress
  namespace: default
spec:
  entryPoints:
    - web
    - websecure
  routes:
    - match: Host(petclinic.ph-rustingheart.dns-dynamic.net)  # Replace with your domain
      kind: Rule
      services:
        - name: petclinic-service
          port: 8080
  tls:
    secretName: petclinic-cert # This will hold your TLS cert managed by Let's Encrypt
