k3s/ingress/rancher-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: rancher-ingress
  namespace: dev
spec:
  ingressClassName: traefik
  rules:
  - host: petclinic.ph-rustingheart.dns-dynamic.net
    http:
      paths:
        - path: /
          pathType: Prefix
          backend:
             service:
              name: rancher
              port:
                number: 8080
